--- a/dds_stmf4.ioc
+++ b/dds_stmf4.ioc
@@ -81,7 +81,7 @@ Dma.USART1_TX.4.PeriphInc=DMA_PINC_DISABLE
 Dma.USART1_TX.4.Priority=DMA_PRIORITY_LOW
 Dma.USART1_TX.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 File.Version=6
-GPIO.groupedBy=
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=true
 Mcu.CPN=STM32F411CEU6
 Mcu.Family=STM32F4
