--- a/dds_stmf4.ioc
+++ b/dds_stmf4.ioc
@@ -23,40 +23,40 @@ Dma.RequestsNb=7
 Dma.SPI1_TX.0.Direction=DMA_MEMORY_TO_PERIPH
 Dma.SPI1_TX.0.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.SPI1_TX.0.Instance=DMA2_Stream2
-Dma.SPI1_TX.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.SPI1_TX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
 Dma.SPI1_TX.0.MemInc=DMA_MINC_ENABLE
 Dma.SPI1_TX.0.Mode=DMA_NORMAL
-Dma.SPI1_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.SPI1_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.SPI1_TX.0.PeriphInc=DMA_PINC_DISABLE
 Dma.SPI1_TX.0.Priority=DMA_PRIORITY_LOW
 Dma.SPI1_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.SPI2_TX.1.Direction=DMA_MEMORY_TO_PERIPH
 Dma.SPI2_TX.1.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.SPI2_TX.1.Instance=DMA1_Stream4
-Dma.SPI2_TX.1.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.SPI2_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
 Dma.SPI2_TX.1.MemInc=DMA_MINC_ENABLE
 Dma.SPI2_TX.1.Mode=DMA_NORMAL
-Dma.SPI2_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.SPI2_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.SPI2_TX.1.PeriphInc=DMA_PINC_DISABLE
 Dma.SPI2_TX.1.Priority=DMA_PRIORITY_LOW
 Dma.SPI2_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.SPI3_TX.3.Direction=DMA_MEMORY_TO_PERIPH
 Dma.SPI3_TX.3.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.SPI3_TX.3.Instance=DMA1_Stream5
-Dma.SPI3_TX.3.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.SPI3_TX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
 Dma.SPI3_TX.3.MemInc=DMA_MINC_ENABLE
 Dma.SPI3_TX.3.Mode=DMA_NORMAL
-Dma.SPI3_TX.3.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.SPI3_TX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.SPI3_TX.3.PeriphInc=DMA_PINC_DISABLE
 Dma.SPI3_TX.3.Priority=DMA_PRIORITY_LOW
 Dma.SPI3_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.SPI4_TX.2.Direction=DMA_MEMORY_TO_PERIPH
 Dma.SPI4_TX.2.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.SPI4_TX.2.Instance=DMA2_Stream1
-Dma.SPI4_TX.2.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.SPI4_TX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
 Dma.SPI4_TX.2.MemInc=DMA_MINC_ENABLE
 Dma.SPI4_TX.2.Mode=DMA_NORMAL
-Dma.SPI4_TX.2.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.SPI4_TX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.SPI4_TX.2.PeriphInc=DMA_PINC_DISABLE
 Dma.SPI4_TX.2.Priority=DMA_PRIORITY_LOW
 Dma.SPI4_TX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
@@ -101,32 +101,33 @@ Mcu.Name=STM32F411C(C-E)Ux
 Mcu.Package=UFQFPN48
 Mcu.Pin0=PC13-ANTI_TAMP
 Mcu.Pin1=PH0 - OSC_IN
-Mcu.Pin10=PB0
-Mcu.Pin11=PB1
-Mcu.Pin12=PB2
-Mcu.Pin13=PB10
-Mcu.Pin14=PB12
-Mcu.Pin15=PB13
-Mcu.Pin16=PB14
-Mcu.Pin17=PA9
-Mcu.Pin18=PA10
-Mcu.Pin19=PA11
+Mcu.Pin10=PA7
+Mcu.Pin11=PB0
+Mcu.Pin12=PB1
+Mcu.Pin13=PB2
+Mcu.Pin14=PB10
+Mcu.Pin15=PB12
+Mcu.Pin16=PB13
+Mcu.Pin17=PB14
+Mcu.Pin18=PA9
+Mcu.Pin19=PA10
 Mcu.Pin2=PH1 - OSC_OUT
-Mcu.Pin20=PA13
-Mcu.Pin21=PA14
-Mcu.Pin22=PB4
-Mcu.Pin23=PB6
-Mcu.Pin24=PB7
-Mcu.Pin25=VP_RTC_VS_RTC_Activate
-Mcu.Pin26=VP_SYS_VS_Systick
+Mcu.Pin20=PA11
+Mcu.Pin21=PA13
+Mcu.Pin22=PA14
+Mcu.Pin23=PB4
+Mcu.Pin24=PB6
+Mcu.Pin25=PB7
+Mcu.Pin26=VP_RTC_VS_RTC_Activate
+Mcu.Pin27=VP_SYS_VS_Systick
 Mcu.Pin3=PA0-WKUP
 Mcu.Pin4=PA1
 Mcu.Pin5=PA2
 Mcu.Pin6=PA3
 Mcu.Pin7=PA4
 Mcu.Pin8=PA5
-Mcu.Pin9=PA7
-Mcu.PinsNb=27
+Mcu.Pin9=PA6
+Mcu.PinsNb=28
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411CEUx
@@ -147,6 +148,7 @@ NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
+NVIC.SPI1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
@@ -184,9 +186,16 @@ PA4.GPIO_PuPd=GPIO_PULLDOWN
 PA4.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA4.Locked=true
 PA4.Signal=GPIO_Output
-PA5.Mode=TX_Only_Simplex_Unidirect_Master
+PA5.Mode=Simplex_Bidirectional_Master
 PA5.Signal=SPI1_SCK
-PA7.Mode=TX_Only_Simplex_Unidirect_Master
+PA6.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PA6.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PA6.GPIO_PuPd=GPIO_NOPULL
+PA6.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PA6.Locked=true
+PA6.PinState=GPIO_PIN_SET
+PA6.Signal=GPIO_Output
+PA7.Mode=Simplex_Bidirectional_Master
 PA7.Signal=SPI1_MOSI
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
@@ -295,22 +304,22 @@ RCC.VCOOutputFreq_Value=168000000
 RCC.VcooutputI2S=150000000
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_64
 SPI1.CalculateBaudRate=1.3125 MBits/s
-SPI1.DataSize=SPI_DATASIZE_16BIT
-SPI1.Direction=SPI_DIRECTION_2LINES
+SPI1.DataSize=SPI_DATASIZE_8BIT
+SPI1.Direction=SPI_DIRECTION_1LINE
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
-SPI2.DataSize=SPI_DATASIZE_16BIT
+SPI2.DataSize=SPI_DATASIZE_8BIT
 SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction,DataSize
 SPI2.Mode=SPI_MODE_SLAVE
 SPI2.VirtualType=VM_SLAVE
-SPI3.DataSize=SPI_DATASIZE_16BIT
+SPI3.DataSize=SPI_DATASIZE_8BIT
 SPI3.Direction=SPI_DIRECTION_2LINES
 SPI3.IPParameters=VirtualType,Mode,Direction,DataSize
 SPI3.Mode=SPI_MODE_SLAVE
 SPI3.VirtualType=VM_SLAVE
-SPI4.DataSize=SPI_DATASIZE_16BIT
+SPI4.DataSize=SPI_DATASIZE_8BIT
 SPI4.Direction=SPI_DIRECTION_2LINES
 SPI4.IPParameters=VirtualType,Mode,Direction,DataSize
 SPI4.Mode=SPI_MODE_SLAVE
